// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when showing current step 1`] = `
<div
  className="src-components-step-index__step-active src-components-step-index__step"
>
  <div
    className="src-components-step-index__number"
  >
    2
  </div>
  <div
    className="src-components-step-index__title"
  >
    The Title
  </div>
</div>
`;

exports[`should render correctly when showing step after current step 1`] = `
<a
  className="src-components-step-index__step-next src-components-step-index__step"
  onClick={[Function]}
>
  <div
    className="src-components-step-index__number"
  >
    3
  </div>
  <div
    className="src-components-step-index__title"
  >
    The Title
  </div>
</a>
`;

exports[`should render correctly when showing step before current step 1`] = `
<a
  className="src-components-step-index__step-completed src-components-step-index__step"
  onClick={[Function]}
>
  <div
    className="src-components-step-index__number"
  >
    1
  </div>
  <div
    className="src-components-step-index__title"
  >
    The Title
  </div>
</a>
`;

exports[`should render correctly when showing step way after current step 1`] = `
<div
  className="src-components-step-index__step-disabled src-components-step-index__step"
>
  <div
    className="src-components-step-index__number"
  >
    6
  </div>
  <div
    className="src-components-step-index__title"
  >
    The Title
  </div>
</div>
`;

exports[`should render correctly when showing step way before current step 1`] = `
<a
  className="src-components-step-index__step-completed src-components-step-index__step"
  onClick={[Function]}
>
  <div
    className="src-components-step-index__number"
  >
    1
  </div>
  <div
    className="src-components-step-index__title"
  >
    The Title
  </div>
</a>
`;
